# S.M.S_Unix_Version

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  project.conf
.github/workflows/: makefileCI.yml
include/: misclib.h  smslib.h
src/: main.c  misclib.c  smslib.c  smslib.h
src/.github/workflows/: makefileCI.yml
tests/: students.txt  test_module.c
